Initial site content

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Calamus Site",
+  "name": "Calamus: Write and Publish novels with ease.",
   "icons": [
     {
       "src": "favicon.ico",
