--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "get-calamus",
-  "homepage": "https://midnightprioriem.github.io/get-calamus",
+  "homepage": "https://calamus.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
