Rebrand to Orca

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "get-calamus",
-  "homepage": "https://calamus.app",
+  "name": "get-orca",
+  "homepage": "https://orcawriter.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,7 +31,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "icons": "png-to-ico public/256x256.png > public/favicon.ico"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "png-to-ico": "^2.1.8"
   }
 }
