--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Calamus Site",
-  "name": "Calamus: Write and Publish novels with ease.",
+  "short_name": "Orca Site",
+  "name": "Orca: Write and Publish novels with ease.",
   "icons": [
     {
       "src": "favicon.ico",
